# target-autocheckout-cpp

./: .gitignore  CMakeLists.txt  README.md  e.js
config/: config.example.json  profile.example.json
include/models/: Profile.h  Task.h  TaskConfig.h
include/network/: HttpClient.h  WebhookClient.h
include/utils/: ConfigLoader.h  FileReader.h  Logger.h  ProxyParser.h
src/: main.cpp
src/models/: Task.cpp
src/network/: HttpClient.cpp  WebhookClient.cpp
src/utils/: ConfigLoader.cpp  FileReader.cpp  Logger.cpp  ProxyParser.cpp
txt/: proxies.example.txt  tasks.example.txt
